--- a/Geolocalizacion.css
+++ b/Geolocalizacion.css
@@ -11,6 +11,12 @@ h1{
     color: darkslategray;
 }
 
+/*especificidad -> 100*/
+#mapa {
+    height: 1000px;
+    width: 100%;
+}
+
 /*especificidad -> 10*/
 .container {
     padding: 1em;
