--- a/Geolocalizacion.css
+++ b/Geolocalizacion.css
@@ -13,32 +13,6 @@ h1{
 
 /*especificidad -> 100*/
 #mapa {
-    margin: auto;
-    height: 40em;
+    height: 1000px;
     width: 100%;
-}
-
-/*especificidad -> 10*/
-.container {
-    padding: 1em;
-    border: solid;
-    border-radius: 0.7em;
-    width: 70%;
-    margin: auto;
-    border-color: darkslategray;
-    margin-bottom: 1em;
-    text-align: center;
-}
-
-/*especificidad -> 1*/
-ul {
-    margin:0;
-    padding:0;
-    text-align: center;
-    list-style-position: inside;             
-}
-
-/*especificidad -> 2*/
-ul  li {
-    padding: 2px 5px;               
 }
